--- a/business_proposal.html
+++ b/business_proposal.html
@@ -77,6 +77,12 @@
     <a href="#budget">Budget</a>
     <a href="#summary">Summary</a>
 </nav>
+    <a href="business_proposal.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="enquiry.html">Enquiry</a>
+    <a href="contact.html">Contact</a>
+</nav>
 
 <main>
     <section id="intro">
@@ -147,6 +153,6 @@
     <p>&copy; 2025 PhoneFixx | Made by a Gomolemo</p>
     <p>Email: <a href="mailto:gomolemophenyo@icloud.com" style="color:white;">gomolemophenyo@icloud.com</a> | Phone: 0670798867</p>
 </footer>
-
+<script src="js/script.js"></script>
 </body>
 </html>
