--- a/contact.html
+++ b/contact.html
@@ -2,38 +2,139 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PhoneFixx - Contact</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 15px;
+        }
+        nav {
+            background-color: #444;
+            text-align: center;
+            padding: 10px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+        }
+        main {
+            padding: 20px;
+        }
+        h2 {
+            color: #333;
+            border-bottom: 2px solid #ddd;
+            padding-bottom: 5px;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            margin-top: 20px;
+        }
+        form {
+            background: white;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            max-width: 500px;
+            margin: 20px auto;
+        }
+        form label {
+            display: block;
+            margin-top: 15px;
+        }
+        input, textarea, select {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            margin-top: 15px;
+            padding: 12px 20px;
+            border: none;
+            background: #444;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background: #333;
+        }
+    </style>
 </head>
-<link rel="stylesheet" href="css/style.css">
 
 <body>
-    <header>
-        <h1>PhoneFixx</h1>
-        <p class="tagline">Quick, affordable phone repairs on campus</p>
-    </header>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="enquiry.html">Enquiry</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+<header>
+    <h1>PhoneFixx</h1>
+</header>
 
-    <main>
-        <h2>Contact Us</h2>
-        <p>Email: gomolemophenyo@icloud.com</p>
-        <p>Phone: 0670798867</p>
-        <p>Locations:</p>
-        <ul>
-            <li>Main Campus Kiosk</li>
-            <li>Residence Pop-up (Fridays)</li>
-        </ul>
-    </main>
+<nav>
+    <a href="business_proposal.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="enquiry.html">Enquiry</a>
+    <a href="contact.html">Contact</a>
+</nav>
 
-    <footer>
-        <p>&copy; 2025 PhoneFixx | Contact: <a href="mailto:gomolemophenyo@icloud.com">gomolemophenyo@icloud.com</a> | 0670798867</p>
-    </footer>
+<main>
+    <h2>Contact Us</h2>
+    <p>Email: gomolemophenyo@icloud.com</p>
+    <p>Phone: 0670798867</p>
+
+    <h3>Locations</h3>
+    <ul>
+        <li>Main Campus Kiosk</li>
+        <li>Residence Pop-up (Fridays)</li>
+    </ul>
+
+    <h3>Send us a message</h3>
+    <form id="contactForm">
+        <label>Name
+            <input type="text" id="c-name" required>
+        </label>
+        <label>Email
+            <input type="email" id="c-email" required>
+        </label>
+        <label>Message Type
+            <select id="c-type">
+                <option>General</option>
+                <option>Feedback</option>
+                <option>Volunteer</option>
+            </select>
+        </label>
+        <label>Message
+            <textarea id="c-msg" rows="6" required></textarea>
+        </label>
+        <button type="submit">Send Email</button>
+        <div id="c-result" aria-live="polite" style="margin-top:10px;"></div>
+    </form>
+</main>
+
+<footer>
+    <p>&copy; 2025 PhoneFixx | Contact: 
+        <a href="mailto:gomolemophenyo@icloud.com" style="color:white;">
+            gomolemophenyo@icloud.com
+        </a> 
+        | 0670798867
+    </p>
+</footer>
+
+<script src="js/script.js"></script>
 </body>
 </html>
